--- a/src/app/pages/search-page/perfect-match/perfect-customer/perfect-customer.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-customer/perfect-customer.component.html
@@ -51,7 +51,7 @@
         <tr>
           <th>Amount</th>
           <th>Alias</th>
-          <th>Campaign</th>
+          <th>Processor Response</th>
         </tr>
         </thead>
         <tbody>
