Add nav bar to customer servic dashboard (search)

--- a/src/app/pages/search-page/perfect-match/perfect-product-schedule/perfect-product-schedule.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-product-schedule/perfect-product-schedule.component.html
@@ -1,6 +1,6 @@
 <div class="perfect-entity">
 
-  <div *ngIf="product; else spin">
+  <div *ngIf="productSchedule; else spin">
     <div class="perfect-entity__info">
       <div class="perfect-entity__info__title">Product Schedule Info</div>
 
