--- a/src/app/pages/search-page/perfect-match/perfect-rebill/perfect-rebill.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-rebill/perfect-rebill.component.html
@@ -1,6 +1,6 @@
 <div class="perfect-entity">
 
-  <div *ngIf="product; else spin">
+  <div *ngIf="rebill; else spin">
     <div class="perfect-entity__info">
       <div class="perfect-entity__info__title">Rebill Info</div>
 
