--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -3,10 +3,22 @@ $border-color: rgba(0, 0, 0, 0.2);
 
 .search {
 
-  &__title {
-    padding: 25px 70px;
-    font-size: 22px;
-    color: $main-color;
+  &__header {
+    border-bottom: 1px solid rgba(0,0,0,0.6);
+    background: #F3F3F3;
+
+    &__item {
+      display: inline-block;
+      margin: 15px 20px;
+      padding: 3px 5px;
+      color: rgba(0,0,0,0.8);
+      font-size: 14px;
+      cursor: pointer;
+
+      &--active {
+        border-bottom: 2px solid #039BE5;
+      }
+    }
   }
 
   &__layout {
