--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -25,6 +25,10 @@ $border-color: rgba(0, 0, 0, 0.2);
     display: flex;
     min-height: calc(100vh - 72px);
     background-color: #fff;
+
+    &--customer-service {
+      min-height: calc(100vh - 127px);
+    }
   }
 
   &__sidenav {
