Change copy on search

--- a/src/app/pages/search-page/search.component.html
+++ b/src/app/pages/search-page/search.component.html
@@ -38,7 +38,7 @@
           </md-checkbox>
         </ng-container>
 
-        <div class="search__sidenav__subtitle"> Refine by Date </div>
+        <div class="search__sidenav__subtitle"> Date Range </div>
         <div class="search__sidenav__date">Date</div>
         <div class="datepicker--custom" [class.datepicker-visible]="datepickerVisible">
           <div (showDaterangepicker)="datepickerShown()" (hideDaterangepicker)="datepickerHidden()" (selected)="dateSelected($event)" daterangepicker>
