--- a/src/app/reports/transactions-report/transactions-report.component.html
+++ b/src/app/reports/transactions-report/transactions-report.component.html
@@ -29,5 +29,6 @@
   (filterSelected)="filterSelected($event)"
   (next)="fetchNext()"
   (previous)="fetchPrevious()"
-  (updateLimit)="updateLimit($event)">
+  (updateLimit)="updateLimit($event)"
+  (download)="download($event)">
 </report-table>
