--- a/src/app/pages/dashboard-page/top-campaigns/top-campaigns.component.html
+++ b/src/app/pages/dashboard-page/top-campaigns/top-campaigns.component.html
@@ -2,7 +2,12 @@
   <div class="dashboard__table-chart__title">
     <div class="dashboard__table-chart__title__main">Top Campaigns</div>
     <div class="dashboard__table-chart__title__sub">Clicks & Conversions</div>
-    <md-icon>more_vert</md-icon>
+    <md-icon [md-menu-trigger-for]="downloadOptions">more_vert</md-icon>
+    <md-menu #downloadOptions="mdMenu" x-position="before">
+      <button md-menu-item (click)="download('json')"> Download JSON </button>
+      <button md-menu-item> Download CSV </button>
+      <button md-menu-item> Download Excel </button>
+    </md-menu>
   </div>
 
   <table *ngIf="campaigns" class="highlight table--no-border">
