--- a/src/app/pages/search-page/perfect-match/perfect-match.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-match.component.html
@@ -18,6 +18,7 @@
     <perfect-product *ngIf="entity.fields.entity_type === 'product'" [id]="entity.id"></perfect-product>
     <perfect-product-schedule *ngIf="entity.fields.entity_type === 'productschedule'" [id]="entity.id"></perfect-product-schedule>
     <perfect-rebill *ngIf="entity.fields.entity_type === 'rebill'" [id]="entity.id"></perfect-rebill>
+    <perfect-campaign *ngIf="entity.fields.entity_type === 'campaign'" [id]="entity.id"></perfect-campaign>
 
     <div (click)="navigateToEntity()" class="perfect-match__view-more">
       view {{entity.fields.entity_type}}
