Capitalize 'SKU' across the project

--- a/src/app/pages/search-page/perfect-match/perfect-product/perfect-product.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-product/perfect-product.component.html
@@ -12,7 +12,7 @@
         </div>
 
         <div class="perfect-entity__info__fields__item">
-          <span class="perfect-entity__info__fields__item__label">Sku:</span>
+          <span class="perfect-entity__info__fields__item__label">SKU:</span>
           <span class="perfect-entity__info__fields__item__value">{{product.sku}}</span>
         </div>
 
